--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
   <body>
     <!-- Header section -->
     <header>
+      <!--Group flexbox used to make header and nav in row. Need to make it same highet one is at the top and the other is at the bottom -->
+      <div class="group">
       <h1>Pete Thinkful | Artist</h1>
       <nav>
         <a href="#about">About</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
+        </div>
       </nav>
     </header>
 
@@ -27,8 +30,8 @@
         <!-- About section -->
         <article id="about">
           <h2>About</h2>
-          <section>
-            <h3>Hi! I'm Pete Thinkful</h3>
+          <!--put items in flex container for section-->
+          <section class="firstsection">
             <div>
               <img
                 class="image-circle"
@@ -36,6 +39,9 @@
                 alt="Pete Thinkful"
               />
             </div>
+            <section>
+            <h3 class="text">Hi! I'm Pete Thinkful</h3>
+            <div class="body">
             <p>I'm an artist living in Denver, Colorado.</p>
             <p>As an artist, I'm interested in:</p>
             <ul>
@@ -47,6 +53,9 @@
               Please feel free to take a look at my website and feel free to
               <a href="#contact">contact me</a>.
             </p>
+            </div>
+            </div>
+          </section>
           </section>
 
           <section>
@@ -69,15 +78,19 @@
         <!-- Portfolio section -->
         <article id="portfolio">
           <h2>Portfolio</h2>
+          <!--Need to update class as the pictures are not even, but they are in row form as needed-->
+          <div class="align" >
           <section>
             <h3>Abstract Red</h3>
             <div>
               <img src="images/abstract-red.png" alt="Abstract Red" />
             </div>
+            <div class="descripton">
             <p>
               Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
               waistcoat scenester hell of.
             </p>
+          </div>
           </section>
 
           <section>
@@ -85,10 +98,12 @@
             <div>
               <img src="images/spiral-zany.png" alt="Spiral Zany" />
             </div>
+            <div class="descripton">
             <p>
               Sriracha portland taxidermy cronut messenger bag, vegan
               distillery. Vaporware kickstarter air plant mumblecore food truck.
             </p>
+            </div>
           </section>
 
           <section>
@@ -96,10 +111,13 @@
             <div>
               <img src="images/melted-rainbow.png" alt="Melted Rainbow" />
             </div>
+            <div class="descripton">
             <p>
               Edison bulb single-origin coffee snackwave, actually ennui
               locavore shabby chic forage.
             </p>
+            </div>
+          </div>
           </section>
         </article>
 
