Updated css to show background centered and hr centered

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
           </section>
           </section>
 
-          <section>
+          <section class="text">
             <h3>Pete's Background</h3>
-            <p>
+            <p style=" width: 650px; margin-left: auto; margin-right: auto;">
               After graduating college, I became an art teacher and worked with
               beginners and professionals. I love art and my works have been
               featured in major art galleries across the globe.
             </p>
-            <p>
+            <p style="width: 650px; margin-left: auto; margin-right: auto;">
               If you're looking to hire an artist or if you're an artist looking
               for a collaborator for your next project, please reach out! I'm so
               excited to work with other artists to create new art.
@@ -126,9 +126,10 @@
         <!-- Contact section -->
         <article id="contact">
           <h2>Contact</h2>
-          <p>
+          <p class="foot">
             I'd love to hear from you! Please feel free to contact or follow me:
           </p>
+          <div style="width: 30%; margin-left: auto; margin-right: auto;">
           <ol>
             <li>
               <a href="">LinkedIn</a>
@@ -141,6 +142,7 @@
             </li>
           </ol>
         </article>
+      </div>
       </div>
     </main>
 
